# sequins

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Procfile  README.md  fly.toml  logo.afdesign  sequins-storage.yaml
apps/linux/: Cargo.toml  com.sequins.desktop.yml
apps/linux/data/: com.sequins.desktop.desktop  com.sequins.desktop.metainfo.xml
apps/linux/src/: app.rs  config.rs  drawing.rs  main.rs  time_range.rs
apps/linux/src/components/: explore.rs  health.rs  logs.rs  metrics.rs  mod.rs  profiles.rs  traces.rs
apps/linux/src/data/: data_source.rs  mod.rs  stream_bridge.rs
apps/web/: Cargo.toml
apps/web/src/: app.rs  error.rs  main.rs  query.rs  state.rs  stream.rs
apps/web/src/routes/: explore.rs  health.rs  index.rs  logs.rs  metrics.rs  mod.rs  profiles.rs  services.rs  traces.rs
apps/web/templates/: base.html
apps/web/templates/partials/: explore.html  health.html  logs.html  metrics.html  profiles.html  sidebar.html  traces.html
crates/seql-ast/: Cargo.toml
crates/seql-ast/src/: ast.rs  correlation.rs  lib.rs  schema.rs
crates/seql-parser/: Cargo.toml
crates/seql-parser/src/: attr.rs  expr.rs  lexer.rs  lib.rs  stages.rs  time.rs
crates/seql-substrait/: Cargo.toml  build.rs
crates/seql-substrait/proto/: seql_extension.proto
crates/seql-substrait/src/: compiler.rs  lib.rs  reducer.rs
crates/sequins-app/: Cargo.toml
crates/sequins-app/src/: main.rs
crates/sequins-app/src/ui/: app_window.rs  logs_view.rs  metrics_view.rs  mock_api.rs  mock_data.rs  mod.rs  profiles_view.rs  service_navigator.rs  tabs.rs  traces_view.rs
crates/sequins-app/tests/: ui_components_test.rs
crates/sequins-arrow-schema/: Cargo.toml
crates/sequins-arrow-schema/src/: column_names.rs  ext_dtypes.rs  lib.rs  schema_catalog.rs  signal_type.rs
crates/sequins-assistant/: Cargo.toml  README.md
crates/sequins-assistant/src/: config.rs  lib.rs  mcp.rs  model.rs  responses.rs  serve.rs  wire.rs
crates/sequins-assistant/src/tools/: mod.rs  ops.rs  registry.rs
crates/sequins-assistant/tests/: agent_loop.rs
crates/sequins-attribute-codec/: Cargo.toml
crates/sequins-attribute-codec/src/: lib.rs
crates/sequins-batch-chain/: Cargo.toml
crates/sequins-batch-chain/src/: lib.rs
crates/sequins-cli/: Cargo.toml
crates/sequins-cli/src/: ingest.rs  main.rs  query.rs  storage.rs
crates/sequins-client/: Cargo.toml
crates/sequins-client/src/: error.rs  lib.rs
crates/sequins-cold-tier/: Cargo.toml
crates/sequins-cold-tier/src/: cold_tier.rs  compact.rs  config.rs  error.rs  helpers.rs  lib.rs  partition.rs  query.rs  record_batch.rs  rollups.rs  series_index.rs  test_helpers.rs  write_logs.rs  write_metrics.rs  write_misc.rs  write_profiles.rs  write_spans.rs
crates/sequins-cold-tier/src/index/: bloom.rs  log_index.rs  mod.rs  span_index.rs  trigram.rs
crates/sequins-cold-tier/src/indexed_layout/: mod.rs  reader.rs  strategy.rs
crates/sequins-companion-index/: Cargo.toml
crates/sequins-companion-index/src/: bloom.rs  lib.rs  log_index.rs  span_index.rs
crates/sequins-core/: Cargo.toml
crates/sequins-core/src/: arrow_schema.rs  error.rs  lib.rs
crates/sequins-core/src/models/: ids.rs  mod.rs  queries.rs
crates/sequins-datafusion-backend/: Cargo.toml
crates/sequins-datafusion-backend/src/: app_state.rs  arrow_convert.rs  execution.rs  lib.rs  registration.rs  trait_impls.rs  union_provider.rs
crates/sequins-datafusion-backend/tests/: alias_columns.rs  app_state_sql.rs  hot_cold_pipeline.rs  query_scope.rs  union_provider.rs  verify_query.rs  verify_vortex.rs  wal_live_query.rs
crates/sequins-ffi/: Cargo.toml  FFI_DELTA_HEARTBEAT_CHANGELOG.md  build.rs  cbindgen.toml
crates/sequins-ffi/include/: module.modulemap  sequins.h
crates/sequins-ffi/src/: assistant.rs  compat.rs  dashboard.rs  data_source.rs  lib.rs  logging.rs  management.rs  runtime.rs  seql.rs
crates/sequins-flight/: Cargo.toml
crates/sequins-flight/src/: flight.rs  frame.rs  lib.rs
crates/sequins-hot-tier/: Cargo.toml
crates/sequins-hot-tier/src/: batch_chain.rs  config.rs  core.rs  error.rs  lib.rs
crates/sequins-live-query/: Cargo.toml
crates/sequins-live-query/src/: delta_emitter.rs  error.rs  heartbeat.rs  lib.rs  live_source_exec.rs  live_stream_wrapper.rs  live_table_provider.rs  manager.rs
crates/sequins-live-query/tests/: integration.rs
crates/sequins-metadata/: Cargo.toml
crates/sequins-metadata/src/: error.rs  lib.rs  store.rs  types.rs
crates/sequins-otlp/: Cargo.toml
crates/sequins-otlp/src/: helpers.rs  lib.rs  logs.rs  metrics.rs  overflow_map.rs  profiles.rs  span_events.rs  span_links.rs  spans.rs
crates/sequins-pprof/: Cargo.toml
crates/sequins-pprof/src/: lib.rs  pprof_parser.rs
crates/sequins-query/: Cargo.toml
crates/sequins-query/proto/: seql_extension.proto
crates/sequins-query/src/: ast.rs  compiler.rs  error.rs  flight.rs  frame.rs  lib.rs  reducer.rs  schema.rs
crates/sequins-query/tests/: proptest_parser.rs
crates/sequins-series-index/: Cargo.toml
crates/sequins-series-index/src/: error.rs  lib.rs
crates/sequins-server/: Cargo.toml
crates/sequins-server/src/: error.rs  flight.rs  lib.rs  management.rs  otlp.rs  otlp_conversions.rs  query.rs
crates/sequins-server/tests/: management_api_tests.rs  otlp_integration.rs  query_api_tests.rs  streaming_integration.rs
crates/sequins-storage/: Cargo.toml  TODO.md
crates/sequins-storage/src/: cold_tier.rs  config.rs  error.rs  hot_tier.rs  hot_tier_exec.rs  hot_tier_provider.rs  lib.rs  storage.rs  test_fixtures.rs  union_provider.rs  wal.rs
crates/sequins-storage/tests/: cold_tier_queries.rs  hot_cold_pipeline.rs  hot_tier_provider_test.rs  memtable_prototype.rs  proptest_hot_tier.proptest-regressions  proptest_hot_tier.rs  schema_consistency.rs  simulation.rs  verify_query.rs  verify_vortex.rs  wal_live_query.rs
crates/sequins-traits/: Cargo.toml
crates/sequins-traits/src/: duration.rs  id.rs  ingest.rs  lib.rs  management.rs  query.rs  storage.rs
example/: Cargo.toml  README.md
example/src/: main.rs  profiler.rs  telemetry.rs  traffic.rs
(+471 files in other folders)
