[workspace]

[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.5"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages", "profiles"] }
pprof = { version = "0.15", default-features = false }
prost = "0.14"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
