[package]
name = "sequins-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Sequins Linux desktop app — OTLP observability viewer"

[[bin]]
name = "sequins-desktop"
path = "src/main.rs"

[dependencies]
# Internal crates (direct Rust dependency, no C FFI)
sequins-types   = { workspace = true }
sequins-query   = { workspace = true }
sequins-storage = { workspace = true }
sequins-server  = { workspace = true }
sequins-client  = { workspace = true }
sequins-view    = { workspace = true }

# Arrow (access RecordBatch directly, no IPC boundary)
arrow = { workspace = true }

# GUI — Relm4 Elm architecture on GTK4/libadwaita
relm4      = { version = "0.9", features = ["libadwaita"] }
gtk4       = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

# Custom rendering (charts, flamegraph, waterfall)
cairo-rs = { version = "0.20", features = ["v1_16"] }

# Async
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono     = { workspace = true }
ciborium   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

