[package]
name = "sequins-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sequins-web"
path = "src/main.rs"

[dependencies]
sequins-query  = { workspace = true }
sequins-client = { workspace = true }
sequins-view   = { workspace = true }

# Use axum 0.8 to match datastar's dependency
axum         = { version = "0.8", features = ["macros"] }
tower-http   = { workspace = true, features = ["trace", "cors", "fs"] }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
async-stream = { workspace = true }

datastar   = { version = "0.3", features = ["axum"] }
minijinja  = { version = "2", features = ["loader"] }

serde      = { workspace = true }
serde_json = { workspace = true }
arrow      = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
scopeguard = "1.2.0"
