[package]
name = "seql-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SeQL abstract syntax tree, correlation tables, and response schema"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
