[package]
name = "sequins-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sequins-core = { path = "../sequins-core" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async trait support
async-trait = "0.1"

