[package]
name = "sequins-datafusion-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DataFusion-based SeQL query backend for Sequins"

[dependencies]
sequins-storage    = { workspace = true }
sequins-query      = { workspace = true }
sequins-types      = { workspace = true }
sequins-otlp       = { workspace = true, features = ["datafusion"] }
sequins-live-query = { workspace = true }

# Arrow + DataFusion
arrow                = { workspace = true }
arrow-flight         = { workspace = true }
datafusion           = { workspace = true }
datafusion-substrait = { workspace = true }

# gRPC / protobuf
prost = { workspace = true }

# Async
tokio        = { workspace = true }
futures      = { workspace = true }
async-trait  = { workspace = true }
async-stream = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
sequins-storage     = { workspace = true, features = ["test-utils"] }
opentelemetry-proto = { workspace = true }
tempfile            = { workspace = true }
tokio               = { version = "1", features = ["test-util"] }
