[package]
name = "sequins-live-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Live query subscription management and heartbeat streaming for Sequins"

[dependencies]
sequins-flight = { workspace = true }
sequins-wal   = { workspace = true }

# Arrow + Flight
arrow-flight = { workspace = true }

# Async
tokio        = { workspace = true }
futures      = { workspace = true }
async-stream = { workspace = true }

# Utilities
parking_lot = { workspace = true }
uuid        = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
object_store        = { workspace = true }
tempfile            = { workspace = true }
opentelemetry-proto = { workspace = true }
