[package]
name = "sequins-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Durable app-state store for Sequins — chat conversations and dashboards on the shared object store"

[dependencies]
object_store = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
futures      = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
