[package]
name = "sequins-otlp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OTLP protobuf → Arrow RecordBatch conversion for Sequins"

[dependencies]
sequins-arrow-schema   = { workspace = true }
sequins-types          = { workspace = true }
sequins-attribute-codec = { workspace = true }

# Arrow
arrow = { workspace = true }

# OpenTelemetry proto
opentelemetry-proto = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
hex    = { workspace = true }
uuid   = { workspace = true }
prost  = { workspace = true }

# Error handling
thiserror = { workspace = true }
