[package]
name = "sequins-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Compatibility facade for SeQL-to-Substrait compilation"

[dependencies]
seql-substrait = { workspace = true }

[dev-dependencies]
seql-parser = { workspace = true }
proptest    = { workspace = true }
