[package]
name = "sequins-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sequins-core = { path = "../sequins-core" }

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC server (for OTLP)
tonic = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "trace", "logs", "metrics"] }

[dev-dependencies]
async-trait = "0.1"
reqwest = { workspace = true, features = ["json"] }
serial_test = "3.2.0"

