[package]
name = "sequins-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OTLP ingest, SeQL query, and management HTTP servers for Sequins"

[dependencies]
sequins-types   = { workspace = true }
sequins-query   = { workspace = true }
sequins-storage = { workspace = true }

# Arrow Flight
arrow-flight = { workspace = true }
arrow        = { workspace = true }
base64       = { workspace = true }

# HTTP servers
axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
async-trait  = { workspace = true }
futures      = { workspace = true }
tokio-stream = { workspace = true }

# OpenTelemetry proto (for OTLP HTTP ingest)
opentelemetry-proto = { workspace = true }

# gRPC and Protobuf
tonic = { workspace = true }
prost = { workspace = true }

# Utilities
hex  = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
datafusion = { workspace = true }
object_store = { workspace = true }
tempfile = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
arrow = { workspace = true }
