[package]
name = "sequins-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OTLP ingest (gRPC + HTTP) server for Sequins"

[dependencies]
sequins-traits  = { workspace = true }

# HTTP server
axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
async-trait  = { workspace = true }
futures      = { workspace = true }
tokio-stream = { workspace = true }

# OpenTelemetry proto (for OTLP ingest)
opentelemetry-proto = { workspace = true }

# gRPC and Protobuf
tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
